Menus and Map Z-Index needs work closes https://github.com/OpenACalendar/OpenACalendar-Web-Core/issues/676

--- a/core/theme/default/css/libIndexAndSite/main.less
+++ b/core/theme/default/css/libIndexAndSite/main.less
@@ -103,7 +103,7 @@ body {
 				border-bottom: #4d3e04 2px solid;
 				border-left: #4d3e04 2px solid;
 				border-right: #4d3e04 2px solid;
-				z-index: 999;
+				z-index: 10000;
 				li {
 					list-style-type: none;
 					display: block;
